[fix] footer on smaller pages

--- a/sass/components/_webapp.scss
+++ b/sass/components/_webapp.scss
@@ -306,4 +306,8 @@ iframe {
     &__content {
         height: 100%;
     }
+
+    &__main-container {
+        min-height: 76%;
+    }
 }
